# iconf

./: .gitignore  .travis.yml  LICENSE.txt  README.rst  setup.cfg  setup.py
appconf/: __init__.py
appconf/tests/: configs.json  settings.py  tests.py
iconf/: __init__.py
iconf/tests/: settings.py  tests.py
