[metadata]
name = appconf
version = 1.0
description = Simple method used to load configuration variables from different sources.
author = Adonis Nafeh
author_email = adonisnafeh@gmail.com
url = https://github.com/adonisn/appconf
download_url = https://github.com/adonisn/appconf/tarball/master
keywords = json, django settings, configuration, loader, environment variables, ci server, continuous integration, circle ci, travis ci, jenkins
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Intended Audience :: Developers
    License :: OSI Approved :: BSD License
	Topic :: Software Development :: Libraries :: Python Modules
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6

[options]
packages = find:
include_package_data = True
zip_safe = False
[options.packages.find]
exclude =
	docs
	*tests
	*tests.*

[bdist_wheel]
universal = 1